Fixed Google Chart overlapping

--- a/cabify-dashboard/elements/google-chart-elasticsearch/google-chart.css
+++ b/cabify-dashboard/elements/google-chart-elasticsearch/google-chart.css
@@ -22,6 +22,10 @@
     text-align: center; 
 }
 
+text {
+  cursor: pointer;
+}
+
 .top-bar{
   width: 100%;
   border-radius: 5px 5px 0 0; 
